# quotal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  Badges.dc.html  Demo.dc.html  Desktop Hero.dc.html  Desktop notifications.dc.html  PLAN.md  Pill Modes.dc.html  SIGNING.md  Themes.dc.html  Tray.dc.html
scripts/: gen-icon.ps1
src/: anchor.js  boot.js  controls.js  dom.js  drag.js  format.js  geometry.js  history.js  i18n.js  index.html  main.js  notify.js  prefs.js  render.js  resize.js  state.js  styles.css  tauri.js  theme.js  update.js  window.js
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  claude_code_bridge.rs  claude_log_parser.rs  commands.rs  lib.rs  local_file_watcher.rs  main.rs  paths.rs  poller.rs  providers.rs  schema_watch.rs  state.rs  tray.rs  usage_api.rs
src/locales/: ar.json  de.json  es.json  fr.json  hi.json  ja.json  ko.json  pt.json  ru.json  zh.json
tests/frontend/: anchor.test.js  format.test.js  geometry.test.js  history.test.js  notify.test.js  prefs.test.js  theme.test.js
