[package]
name = "quotal"
version = "0.3.2"
description = "Quotal — widget de escritorio que muestra el uso restante de Claude (sesion 5h, semana 7d y contexto)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Arquitectura híbrida: la frescura del CONTEXTO viene de eventos de archivos
# (`notify`, sin red), pero los LÍMITES REALES del plan (sesión 5h / semana 7d)
# se obtienen del mismo endpoint que usa `/usage` (`reqwest`), reutilizando el
# token OAuth local de Claude Code. No se gestiona ningún secreto propio.
[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
# Auto-actualización: comprueba el endpoint de releases, verifica la firma
# minisign del artefacto (clave pública en tauri.conf.json) y aplica la update.
tauri-plugin-updater = "2"
# Notificaciones de escritorio nativas: aviso al cruzar el umbral de uso (la
# lógica de umbral/anti-spam vive en el frontend, que ya recibe el flujo de plan).
tauri-plugin-notification = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

# Solo Windows: SetWindowPos para aplicar posición + tamaño en UNA operación
# atómica del SO (cambio de modo píldora↔completo perfectamente fluido, sin frame
# intermedio). Misma versión que usa Tauri para reutilizar su tipo HWND sin
# conflictos. En macOS/Linux se usa el fallback de dos pasos (sin esta dependencia).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    # timeBeginPeriod/timeEndPeriod: sube la resolución del temporizador durante
    # la animación de la píldora para que los frames sean uniformes (sin tirones).
    "Win32_Media",
] }

# Dependencias SOLO de test (no entran en el binario de release). `httpmock`
# simula los endpoints de Anthropic (`/usage` y refresco de token) para ejercitar
# el flujo crítico de fetch/refresh sin red real; `tempfile` aísla las escrituras
# a `.credentials.json` en un directorio temporal; `serial_test` serializa los
# tests que tocan variables de entorno globales (HOME / QUOTAL_*_URL).
[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
serial_test = "3"

[lib]
name = "quotal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Perfil de release optimizado para un widget de escritorio: priorizamos tamaño
# y un binario limpio (sin símbolos), manteniendo buen rendimiento.
#  - opt-level = "s": optimiza tamaño (el trabajo de CPU aquí es trivial).
#  - lto = true       : optimización entre crates → más rápido y más pequeño.
#  - codegen-units = 1: mejor optimización a costa de tiempo de compilación.
#  - panic = "abort"  : sin tablas de desenrollado → binario menor.
#  - strip = true     : elimina símbolos de depuración del binario final.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
